--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "canvas": "^2.11.2",
-    "carbon-trigger-extension": "file:start"
+    "carbon-trigger-extension": "file:start",
+    "solution": "file:your-work"
   }
 }
